--- a/pet-clinic-data/pom.xml
+++ b/pet-clinic-data/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>sf-pet-clinic</artifactId>
         <groupId>dwanford.springframework</groupId>
-        <version>0.0.1</version>
+        <version>0.0.1-SHAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
