--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	</parent>
 	<groupId>dwanford.springframework</groupId>
 	<artifactId>sf-pet-clinic</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.1-SHAPSHOT</version>
 	<name>sf-pet-clinic</name>
 	<description>SF Pet Clinic Project</description>
 	<properties>
