--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -3,12 +3,13 @@
     <parent>
         <artifactId>sf-pet-clinic</artifactId>
         <groupId>dwanford.springframework</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.1-SHAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>pet-clinic-web</artifactId>
+  <version>0.0.1</version>
 
     <properties>
         <maven.compiler.source>18</maven.compiler.source>
