--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -9,7 +9,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>pet-clinic-web</artifactId>
-  <version>0.0.1</version>
+    <version>0.0.1-SHAPSHOT</version>
 
     <properties>
         <maven.compiler.source>18</maven.compiler.source>
