--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 executors:
   my-custom-executor:
     docker:
-      - image: cimg/openjdk:18-jdk
+      - image: cimg/openjdk:18.0
         auth:
           # ensure you have first added these secrets
           # visit app.circleci.com/settings/project/github/Dwanford/sf-pet-clinic/environment-variables
