--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,15 +9,23 @@ executors:
           username: $DOCKER_HUB_USER
           password: $DOCKER_HUB_PASSWORD
 jobs:
-  tests:
+  maven-install:
 
-    executor: my-custom-executor
+    executor: main-executor
     steps:
       - checkout
       - run: |
           mvn install
 
+  tests:
+
+    executor: main-executor
+    steps:
+      - run: |
+          mvn integration-test
+
 workflows:
   tests-workflow:
     jobs:
+      - maven-install
       - tests
