--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>sf-pet-clinic</artifactId>
-        <groupId>dwanford.springframework</groupId>
+        <groupId>com.dwanford</groupId>
         <version>0.0.1-SHAPSHOT</version>
     </parent>
 
@@ -24,7 +24,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>dwanford.springframework</groupId>
+            <groupId>com.dwanford</groupId>
             <artifactId>pet-clinic-data</artifactId>
             <version>0.0.1-SHAPSHOT</version>
         </dependency>
