--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 		<version>2.7.4</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>dwanford.springframework</groupId>
+	<groupId>com.dwanford</groupId>
 	<artifactId>sf-pet-clinic</artifactId>
 	<version>0.0.1-SHAPSHOT</version>
 	<name>sf-pet-clinic</name>
